MiniPython/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     stmt -> define_stmt
Rule 8     expr -> expr LESSTHAN expr
Rule 9     expr -> expr GREATERTHAN expr
Rule 10    expr -> expr GREATEREQUAL expr
Rule 11    expr -> expr LESSEQUAL expr
Rule 12    expr -> expr EQUAL expr
Rule 13    expr -> expr NOTEQUAL expr
Rule 14    expr -> expr PLUS term
Rule 15    expr -> expr MINUS term
Rule 16    expr -> list_stuff
Rule 17    list_stuff -> LBRACKET expr_list RBRACKET
Rule 18    list_stuff -> LBRACKET RBRACKET
Rule 19    list_stuff -> CAR expr
Rule 20    list_stuff -> CDR expr
Rule 21    list_stuff -> CONS expr COMMA expr
Rule 22    list_stuff -> NULL expr
Rule 23    expr_list -> expr COMMA expr_list
Rule 24    expr_list -> expr
Rule 25    expr -> term
Rule 26    term -> term TIMES fact
Rule 27    term -> fact
Rule 28    fact -> LPAREN expr RPAREN
Rule 29    fact -> NUMBER
Rule 30    fact -> IDENT
Rule 31    fact -> func_call
Rule 32    assign_stmt -> IDENT ASSIGNOP expr
Rule 33    while_stmt -> WHILE expr DO stmt_list OD
Rule 34    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 35    define_stmt -> DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
Rule 36    param_list -> IDENT COMMA param_list
Rule 37    param_list -> IDENT
Rule 38    func_call -> IDENT LPAREN expr_list RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 32
CAR                  : 19
CDR                  : 20
COMMA                : 21 23 36
CONS                 : 21
DEFINE               : 35
DO                   : 33
ELSE                 : 34
END                  : 35
EQUAL                : 12
FI                   : 34
GREATEREQUAL         : 10
GREATERTHAN          : 9
IDENT                : 30 32 35 36 37 38
IF                   : 34
LBRACKET             : 17 18
LESSEQUAL            : 11
LESSTHAN             : 8
LPAREN               : 28 35 38
MINUS                : 15
NOTEQUAL             : 13
NULL                 : 22
NUMBER               : 29
OD                   : 33
PLUS                 : 14
PROC                 : 35
RBRACKET             : 17 18
RPAREN               : 28 35 38
SEMICOLON            : 2
THEN                 : 34
TIMES                : 26
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 4
define_stmt          : 7
expr                 : 8 8 9 9 10 10 11 11 12 12 13 13 14 15 19 20 21 21 22 23 24 28 32 33 34
expr_list            : 17 23 38
fact                 : 26 27
func_call            : 31
if_stmt              : 6
list_stuff           : 16
param_list           : 35 36
program              : 0
stmt                 : 2 3
stmt_list            : 1 2 33 34 34 35
term                 : 14 15 25 26
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (32) assign_stmt -> . IDENT ASSIGNOP expr
    (33) while_stmt -> . WHILE expr DO stmt_list OD
    (34) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (35) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 6
    WHILE           shift and go to state 1
    IF              shift and go to state 8
    DEFINE          shift and go to state 5

    stmt_list                      shift and go to state 9
    if_stmt                        shift and go to state 10
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 11
    program                        shift and go to state 4

state 1

    (33) while_stmt -> WHILE . expr DO stmt_list OD
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 21
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 2

    (7) stmt -> define_stmt .

    SEMICOLON       reduce using rule 7 (stmt -> define_stmt .)
    ELSE            reduce using rule 7 (stmt -> define_stmt .)
    END             reduce using rule 7 (stmt -> define_stmt .)
    OD              reduce using rule 7 (stmt -> define_stmt .)
    FI              reduce using rule 7 (stmt -> define_stmt .)
    $end            reduce using rule 7 (stmt -> define_stmt .)


state 3

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    END             reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)


state 4

    (0) S' -> program .



state 5

    (35) define_stmt -> DEFINE . IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 25


state 6

    (32) assign_stmt -> IDENT . ASSIGNOP expr

    ASSIGNOP        shift and go to state 26


state 7

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 27
    $end            reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)


state 8

    (34) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 28
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 9

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 10

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    END             reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)


state 11

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    END             reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)


state 12

    (21) list_stuff -> CONS . expr COMMA expr
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 29
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 13

    (19) list_stuff -> CAR . expr
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 30
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 14

    (17) list_stuff -> LBRACKET . expr_list RBRACKET
    (18) list_stuff -> LBRACKET . RBRACKET
    (23) expr_list -> . expr COMMA expr_list
    (24) expr_list -> . expr
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    RBRACKET        shift and go to state 33
    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr_list                      shift and go to state 31
    list_stuff                     shift and go to state 22
    expr                           shift and go to state 32
    fact                           shift and go to state 24

state 15

    (22) list_stuff -> NULL . expr
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 34
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 16

    (31) fact -> func_call .

    TIMES           reduce using rule 31 (fact -> func_call .)
    LESSTHAN        reduce using rule 31 (fact -> func_call .)
    GREATERTHAN     reduce using rule 31 (fact -> func_call .)
    GREATEREQUAL    reduce using rule 31 (fact -> func_call .)
    LESSEQUAL       reduce using rule 31 (fact -> func_call .)
    EQUAL           reduce using rule 31 (fact -> func_call .)
    NOTEQUAL        reduce using rule 31 (fact -> func_call .)
    PLUS            reduce using rule 31 (fact -> func_call .)
    MINUS           reduce using rule 31 (fact -> func_call .)
    DO              reduce using rule 31 (fact -> func_call .)
    THEN            reduce using rule 31 (fact -> func_call .)
    COMMA           reduce using rule 31 (fact -> func_call .)
    RBRACKET        reduce using rule 31 (fact -> func_call .)
    RPAREN          reduce using rule 31 (fact -> func_call .)
    SEMICOLON       reduce using rule 31 (fact -> func_call .)
    $end            reduce using rule 31 (fact -> func_call .)
    OD              reduce using rule 31 (fact -> func_call .)
    ELSE            reduce using rule 31 (fact -> func_call .)
    FI              reduce using rule 31 (fact -> func_call .)
    END             reduce using rule 31 (fact -> func_call .)


state 17

    (30) fact -> IDENT .
    (38) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 30 (fact -> IDENT .)
    LESSTHAN        reduce using rule 30 (fact -> IDENT .)
    GREATERTHAN     reduce using rule 30 (fact -> IDENT .)
    GREATEREQUAL    reduce using rule 30 (fact -> IDENT .)
    LESSEQUAL       reduce using rule 30 (fact -> IDENT .)
    EQUAL           reduce using rule 30 (fact -> IDENT .)
    NOTEQUAL        reduce using rule 30 (fact -> IDENT .)
    PLUS            reduce using rule 30 (fact -> IDENT .)
    MINUS           reduce using rule 30 (fact -> IDENT .)
    DO              reduce using rule 30 (fact -> IDENT .)
    THEN            reduce using rule 30 (fact -> IDENT .)
    COMMA           reduce using rule 30 (fact -> IDENT .)
    RBRACKET        reduce using rule 30 (fact -> IDENT .)
    RPAREN          reduce using rule 30 (fact -> IDENT .)
    SEMICOLON       reduce using rule 30 (fact -> IDENT .)
    $end            reduce using rule 30 (fact -> IDENT .)
    OD              reduce using rule 30 (fact -> IDENT .)
    ELSE            reduce using rule 30 (fact -> IDENT .)
    FI              reduce using rule 30 (fact -> IDENT .)
    END             reduce using rule 30 (fact -> IDENT .)
    LPAREN          shift and go to state 35


state 18

    (29) fact -> NUMBER .

    TIMES           reduce using rule 29 (fact -> NUMBER .)
    LESSTHAN        reduce using rule 29 (fact -> NUMBER .)
    GREATERTHAN     reduce using rule 29 (fact -> NUMBER .)
    GREATEREQUAL    reduce using rule 29 (fact -> NUMBER .)
    LESSEQUAL       reduce using rule 29 (fact -> NUMBER .)
    EQUAL           reduce using rule 29 (fact -> NUMBER .)
    NOTEQUAL        reduce using rule 29 (fact -> NUMBER .)
    PLUS            reduce using rule 29 (fact -> NUMBER .)
    MINUS           reduce using rule 29 (fact -> NUMBER .)
    DO              reduce using rule 29 (fact -> NUMBER .)
    THEN            reduce using rule 29 (fact -> NUMBER .)
    COMMA           reduce using rule 29 (fact -> NUMBER .)
    RBRACKET        reduce using rule 29 (fact -> NUMBER .)
    RPAREN          reduce using rule 29 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 29 (fact -> NUMBER .)
    $end            reduce using rule 29 (fact -> NUMBER .)
    OD              reduce using rule 29 (fact -> NUMBER .)
    ELSE            reduce using rule 29 (fact -> NUMBER .)
    FI              reduce using rule 29 (fact -> NUMBER .)
    END             reduce using rule 29 (fact -> NUMBER .)


state 19

    (28) fact -> LPAREN . expr RPAREN
    (8) expr -> . expr LESSTHAN expr
    (9) expr -> . expr GREATERTHAN expr
    (10) expr -> . expr GREATEREQUAL expr
    (11) expr -> . expr LESSEQUAL expr
    (12) expr -> . expr EQUAL expr
    (13) expr -> . expr NOTEQUAL expr
    (14) expr -> . expr PLUS term
    (15) expr -> . expr MINUS term
    (16) expr -> . list_stuff
    (25) expr -> . term
    (17) list_stuff -> . LBRACKET expr_list RBRACKET
    (18) list_stuff -> . LBRACKET RBRACKET
    (19) list_stuff -> . CAR expr
    (20) list_stuff -> . CDR expr
    (21) list_stuff -> . CONS expr COMMA expr
    (22) list_stuff -> . NULL expr
    (26) term -> . term TIMES fact
    (27) term -> . fact
    (28) fact -> . LPAREN expr RPAREN
    (29) fact -> . NUMBER
    (30) fact -> . IDENT
    (31) fact -> . func_call
    (38) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 14
    CAR             shift and go to state 13
    CDR             shift and go to state 23
    CONS            shift and go to state 12
    NULL            shift and go to state 15
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 17

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 36
    list_stuff                     shift and go to state 22
    fact                           shift and go to state 24

state 20

    (25) expr -> term .
    (26) term -> term . TIMES fact

    LESSTHAN        reduce using rule 25 (expr -> term .)
    GREATERTHAN     reduce using rule 25 (expr -> term .)
    GREATEREQUAL    reduce using rule 25 (expr -> term .)
    LESSEQUAL       reduce using rule 25 (expr -> term .)
    EQUAL           reduce using rule 25 (expr -> term .)
    NOTEQUAL        reduce using rule 25 (expr -> term .)
    PLUS            reduce using rule 25 (expr -> term .)
    MINUS           reduce using rule 25 (expr -> term .)
    DO              reduce using rule 25 (expr -> term .)
    THEN            reduce using rule 25 (expr -> term .)
    COMMA           reduce using rule 25 (expr -> term .)
    RBRACKET        reduce using rule 25 (expr -> term .)
    RPAREN          reduce using rule 25 (expr -> term .)
    SEMICOLON       reduce using rule 25 (expr -> term .)
    $end            reduce using rule 25 (expr -> term .)
    OD              reduce using rule 25 (expr -> term .)
    ELSE            reduce using rule 25 (expr -> term .)
    FI              reduce using rule 25 (expr -> term .)
    END             reduce using rule 25 (expr -> term .)
    TIMES           shift and go to state 37


state 21

    (33) while_stmt -> WHILE expr . DO stmt_list OD
    (8) expr -> expr . LESSTHAN expr
    (9) expr -> expr . GREATERTHAN expr
    (10) expr -> expr . GREATEREQUAL expr
    (11) expr -> expr . LESSEQUAL expr
    (12) expr -> expr . EQUAL expr
    (13) expr -> expr . NOTEQUAL expr
    (14) expr -> expr . PLUS term
    (15) expr -> expr . MINUS term
